<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/idoponEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/e_mail" />

        <TextView
            android:id="@+id/idopontCim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idoponEmail"
            android:padding="8dp"
            android:text="@string/cim" />

        <TextView
            android:id="@+id/idopontIdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idopontCim"
            android:padding="8dp"
            android:text="@string/ido" />

        <Button
            android:id="@+id/foglalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idopontIdo"
            android:text="@string/foglal" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>